fixed string encoding to use MIDIUtils encoding method